2014031501 Sat Mar 15 2014
+ New maintainer: BOOK
+ New repository
+ Staff updates since June 2012
+ Reformatted Changes as per CPAN::Changes::Spec

2012062101 Thu Jun 21 19:32:50 CEST 2012
+ STRANGE made his first release.

2012052501 Fri May 25 22:36:53 CEST 2012
+ We lose some, we gain some.

2012050801 Tue May  8 10:27:19 CEST 2012
+ A missed mutation

2012050701 Mon May  7 21:08:29 CEST 2012
+ Employee mutations

2011091501 Thu Sep 15 15:08:59 CEST 2011
+ Some who's been working for us for some time

2011080102 Mon Aug  1 16:22:07 CEST 2011
+ We've hired him some time ago

2011080101 Mon Aug  1 16:14:55 CEST 2011
+ New hire

2011052101 Sat May 21 00:23:30 CEST 2011
+ First release of a module by an existing employee (Congrats!)

2010112701 Sat Nov 27 22:57:52 CET 2010
+ Fix spelling

2010112601 Fri Nov 26 23:34:29 CET 2010
+ New hire

2010103101 Sun Oct 31 14:49:39 CET 2010
+ New Hire

2010101701 Sun Oct 17 00:56:44 JST 2010
+ Employee mutations.

2010092001 Mon Sep 20 13:51:04 CEST 2010
+ New hire

2010091601 Thu Sep 16 12:10:37 CEST 2010
+ Fix tests

2010091501 Wed Sep 15 02:53:49 CEST 2010
+ Mention requirements in Makefile.PL

2010091101 Sat Sep 11 01:46:08 CEST 2010
+ First release